overflow css fix in speakers

--- a/src/App2.css
+++ b/src/App2.css
@@ -274,7 +274,7 @@
     flex-direction: column;
     background: white;
     align-items: center;
-    overflow: auto;
+    /* overflow: auto; */
     justify-content: center;
   }
 
